--- a/Contattami.html
+++ b/Contattami.html
@@ -92,7 +92,12 @@
  <button id="facebook" style="font-size:20px"><i class="fa fa-facebook"> Facebook </i></button>
  </form>
 
-<!-- TWITTER -->
+<!-- LinkedIN -->
+ <form class="social1" action="https://www.linkedin.com/in/jozefin-duoda-661b84135/" target="_blank">
+ <button id="twitter" style="font-size:20px"><i class="fa fa-linkedin"> LinkedIN </i></button>
+ </form>
+  
+  <!-- TWITTER -->
  <form class="social1" action="https://twitter.com/DUODATraduzioni" target="_blank">
  <button id="twitter" style="font-size:20px"><i class="fa fa-twitter"> Twitter </i></button>
  </form>
