--- a/Recensioni.html
+++ b/Recensioni.html
@@ -6,6 +6,16 @@
   <meta name="description" content="Traduttore e interprete in lingue: albanese, italiano">
   <title>DUODA Traduzioni | Traduttore albanese italiano</title>
 
+  <!-- Google Analytics -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9PN5RV5DKY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9PN5RV5DKY');
+</script>
   <!-- CSS  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
