change from Index to index

--- a/Contattami.html
+++ b/Contattami.html
@@ -34,8 +34,8 @@
  <!-- Fixed Navbar -->
        <div class="topnav" id="myTopnav">
         <div class="secondnav">
-                <a href="Index.html" class="active">DUODA Traduzioni</a>
-                <a href="Index.html">Home</a>
+                <a href="index.html" class="active">DUODA Traduzioni</a>
+                <a href="index.html">Home</a>
                 <a href="Su_di_me.html">Su di me</a>
                 <a href="I_miei_servizi.html">I miei servizi</a>
                 <a href="Contattami.html">Contattami</a>
