--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="background1.jpg" width="800" alt="coffee background img 1"></div>
+    <div class="parallax"><img src="background1.jpg" width="800" alt="coffee background duoda"></div>
   </div>
 
 <!-- Sezione Uno -->
@@ -120,7 +120,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt="jozefin duoda background img 2" width="800"></div>
+    <div class="parallax"><img src="background2.jpg" alt="jozefin duoda background" width="800"></div>
   </div>
 
   <div class="container">
@@ -148,7 +148,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3" width="600"></div>
+    <div class="parallax"><img src="background3.jpg" alt="duoda traduzioni" width="600"></div>
   </div>
 
 <!-- Footer-->
