--- a/Contattami.html
+++ b/Contattami.html
@@ -54,7 +54,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="background 4.1.jpg" alt="coffee background img 1" width="1000"></div>
+    <div class="parallax"><img src="background 4.1.jpg" alt="coffee duoda traduzioni" width="1000"></div>
   </div>
 
 
