--- a/I_miei_servizi.html
+++ b/I_miei_servizi.html
@@ -56,7 +56,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="background3.1.jpg" alt="typewriter" width="600"></div>
+    <div class="parallax"><img src="background3.1.jpg" alt="typewriter duoda traduzioni" width="600"></div>
   </div>
 
 <!-- Sezione Uno -->
