--- a/Recensioni.html
+++ b/Recensioni.html
@@ -55,7 +55,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background5.1.jpg" alt="coffee background img 1" width="500"></div>
+    <div class="parallax"><img src="background5.1.jpg" alt="typewritter duoda traduzioni" width="500"></div>
   </div>
 
 <!-- Sezione Uno -->
