--- a/Su_di_me.html
+++ b/Su_di_me.html
@@ -56,7 +56,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img id="typewriter" src="background2.1.jpg" alt="typewriter" width="600" center></div>
+    <div class="parallax"><img id="typewriter" src="background2.1.jpg" alt="typewriter duoda traduzioni" width="600" center></div>
   </div>
 
 <!-- Sezione Uno -->
@@ -98,7 +98,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img id="Jozefin" src="background2.2.jpg" width="750" alt="jozefin duoda background img 2"></div>
+    <div class="parallax"><img id="Jozefin" src="background2.2.jpg" width="750" alt="jozefin duoda"></div>
   </div>
 
 
