--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="authur" content="Jozefin Duoda">
 
 <!-- Favicon -->	
-<link rel="shortcut icon" type="image/png" href="img/favicon.png">
+<link rel="shortcut icon" type="image/png" href="duoda-traduzioni/favicon.png">
 	
 <!-- Google Analytics -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
