--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="authur" content="Jozefin Duoda">
 
 <!-- Favicon -->	
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="shortcut icon" type="image" href="favicon.ico">
 	
 <!-- Google Analytics -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
