--- a/Contattami.html
+++ b/Contattami.html
@@ -10,7 +10,7 @@
   <meta name="authur" content="Jozefin Duoda">
 
 <!-- Favicon -->	
-<link rel="shortcut icon" type="image/png" href="favicon.png">	
+<link rel="shortcut icon" type="image" href="duoda-traduzioni/favicon.ico">
 
   <!-- Google Analytics -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
