--- a/I_miei_servizi.html
+++ b/I_miei_servizi.html
@@ -10,10 +10,8 @@
   <meta name="authur" content="Jozefin Duoda">
 
 <!-- Favicon -->	
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">	
+<link rel="shortcut icon" type="image" href="duoda-traduzioni/favicon.ico">
+	
 <!-- Google Analytics -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9PN5RV5DKY"></script>
