--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <!-- Favicon -->	
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" href="favicon.ico" type="image/x-icon"/>
 	
 <!-- Google Analytics -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
