--- a/Recensioni.html
+++ b/Recensioni.html
@@ -7,10 +7,10 @@
   <title>DUODA Traduzioni | Traduttore albanese italiano</title>
   <meta name="description" content="Traduttore e interprete in lingue: albanese, italiano">
   <meta name="keywords" content="Traduttore, interprete, lingue, albanese, italiano, interprete, Duoda">
-  <meta name="authur" content="Jozefin Duoda">
+  <meta name="author" content="Jozefin Duoda">
 	
 <!-- Favicon -->	
-<link rel="shortcut icon" type="image" href="duoda-traduzioni/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
   <!-- Google Analytics -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
