--- a/I_miei_servizi.html
+++ b/I_miei_servizi.html
@@ -7,7 +7,7 @@
   <title>DUODA Traduzioni | Traduttore albanese italiano</title>
   <meta name="description" content="Traduttore e interprete in lingue: albanese, italiano">
   <meta name="keywords" content="Traduttore, interprete, lingue, albanese, italiano, interprete, Duoda">
-  <meta name="authur" content="Jozefin Duoda">
+  <meta name="author" content="Jozefin Duoda">
 
 <!-- Favicon -->	
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
