--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="background1.jpg" width="800" alt="coffee background duoda"></div>
+    <div class="parallax"><img src="background1.jpg" width="800" alt="first view jozefin duoda"></div>
   </div>
 
 <!-- Sezione Uno -->
