--- a/Recensioni.html
+++ b/Recensioni.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>DUODA Traduzioni | Traduttore albanese italiano</title>
+  <title>DUODA Traduzioni | Recensioni su Jozefin Duoda</title>
   <meta name="description" content="Traduttore e interprete in lingue: albanese, italiano">
   <meta name="keywords" content="Traduttore, interprete, lingue, albanese, italiano, interprete, Duoda">
   <meta name="author" content="Jozefin Duoda">
