--- a/I_miei_servizi.html
+++ b/I_miei_servizi.html
@@ -80,12 +80,12 @@
          <div class="prezzi"> 
           <div class="innerContainer">
            <h5>Italiano > Albanese</h5><br>  
-            <div id="hoverTariff"><b>Traduzioni Giurate/Asseverazioni; <br> presso il Tribunale di Firenze</b>
-	<br> ><b>Euro 60,00</b>
-	<div id="hoverTariff"><b>Legalizzazioni presso<br> presso il Tribunale di Firenze</b>
-	<br> ><b>Euro 60,00</b>
-	<div id="hoverTariff"><b>Legalizzazioni + Asseverazione presso<br> presso il Tribunale di Firenze</b>
-	<br> ><b>Euro 100,00</b>
+            <div id="hoverTariff"><b>Traduzioni Giurate/Asseverazioni<br> presso il Tribunale di Firenze</b>
+		<br> ><b>Euro 60,00</b>
+		<div id="hoverTariff"><b>Legalizzazioni presso<br> presso il Tribunale di Firenze</b>
+		<br> ><b>Euro 60,00</b>
+		<div id="hoverTariff"><b>Legalizzazioni + Asseverazione presso<br> presso il Tribunale di Firenze</b>
+		<br> ><b>Euro 100,00</b>
             <br><b>Traduzioni varie</b><br>> a partire da <b>Euro 0,065</b> a parola/carattere
             <br><b>Modifiche (Editing)</b><br> > a partire da <b>Euro 0,040</b> a parola/carattere
             <br><b>Correzione di bozze</b><br> > a partire da <b>Euro 0,040</b> a parola/carattere
@@ -97,12 +97,12 @@
       
             <div class="innerContainer">
               <h5>Albanese > Italiano</h5><br> 
-              <div id="hoverTariff"><b>Traduzioni Giurate/Asseverazioni; <br> presso il Tribunale di Firenze</b>
-	<br> ><b>Euro 60,00</b>
-	<div id="hoverTariff"><b>Legalizzazioni presso<br> presso il Tribunale di Firenze</b>
-	<br> ><b>Euro 60,00</b>
-	<div id="hoverTariff"><b>Legalizzazioni + Asseverazione presso<br> presso il Tribunale di Firenze</b>
-	<br> ><b>Euro 100,00</b>
+              <div id="hoverTariff"><b>Traduzioni Giurate/Asseverazioni<br> presso il Tribunale di Firenze</b>
+		<br> ><b>Euro 60,00</b>
+		<div id="hoverTariff"><b>Legalizzazioni presso<br> presso il Tribunale di Firenze</b>
+		<br> ><b>Euro 60,00</b>
+		<div id="hoverTariff"><b>Legalizzazioni + Asseverazione presso<br> presso il Tribunale di Firenze</b>
+		<br> ><b>Euro 100,00</b>
               <br><b>Traduzioni varie</b><br>> a partire da <b>Euro 0,065</b> a parola/carattere
               <br><b>Modifiche (Editing)</b><br> > a partire da <b>Euro 0,040</b> a parola/carattere
               <br><b>Correzione di bozze</b><br> > a partire da <b>Euro 0,040</b> a parola/carattere
@@ -114,12 +114,12 @@
 
             <div class="innerContainer">
               <h5>Inglese > Albanese</h5><br> 
-              <div id="hoverTariff"><b>Traduzioni Giurate/Asseverazioni; <br> presso il Tribunale di Firenze</b>
-	<br> ><b>Euro 60,00</b>
-	<div id="hoverTariff"><b>Legalizzazioni presso<br> presso il Tribunale di Firenze</b>
-	<br> ><b>Euro 60,00</b>
-	<div id="hoverTariff"><b>Legalizzazioni + Asseverazione presso<br> presso il Tribunale di Firenze</b>
-	<br> ><b>Euro 100,00</b>
+              <div id="hoverTariff"><b>Traduzioni Giurate/Asseverazioni<br> presso il Tribunale di Firenze</b>
+		<br> ><b>Euro 60,00</b>
+		<div id="hoverTariff"><b>Legalizzazioni presso<br> presso il Tribunale di Firenze</b>
+		<br> ><b>Euro 60,00</b>
+		<div id="hoverTariff"><b>Legalizzazioni + Asseverazione presso<br> presso il Tribunale di Firenze</b>
+		<br> ><b>Euro 100,00</b>
 		<br><b>Traduzioni varie</b><br>> a partire da <b>Euro 0,070</b> a parola/carattere
               <br><b>Modifiche (Editing)</b><br> > a partire da <b>Euro 0,045</b> a parola/carattere
               <br><b>Correzione di bozze</b><br> > a partire da <b>Euro 0,045</b> a parola/carattere
