--- a/I_miei_servizi.html
+++ b/I_miei_servizi.html
@@ -80,7 +80,7 @@
          <div class="prezzi"> 
           <div class="innerContainer">
            <h5>Italiano > Albanese</h5><br>  
-            <div id="hoverTariff"><b>Traduzioni Giurate/Asseverazioni<br> presso il Tribunale di Firenze</b>
+            <div id="hoverTariff"><b>Traduzioni Giurate/Asseverazioni<br>Tribunale di Firenze</b>
 		<br> ><b>Euro 60,00</b>
 		<div id="hoverTariff"><b>Legalizzazioni presso<br> presso il Tribunale di Firenze</b>
 		<br> ><b>Euro 60,00</b>
@@ -97,7 +97,7 @@
       
             <div class="innerContainer">
               <h5>Albanese > Italiano</h5><br> 
-              <div id="hoverTariff"><b>Traduzioni Giurate/Asseverazioni<br> presso il Tribunale di Firenze</b>
+              <div id="hoverTariff"><b>Traduzioni Giurate/Asseverazioni<br>Tribunale di Firenze</b>
 		<br> ><b>Euro 60,00</b>
 		<div id="hoverTariff"><b>Legalizzazioni presso<br> presso il Tribunale di Firenze</b>
 		<br> ><b>Euro 60,00</b>
@@ -114,7 +114,7 @@
 
             <div class="innerContainer">
               <h5>Inglese > Albanese</h5><br> 
-              <div id="hoverTariff"><b>Traduzioni Giurate/Asseverazioni<br> presso il Tribunale di Firenze</b>
+              <div id="hoverTariff"><b>Traduzioni Giurate/Asseverazioni<br>il Tribunale di Firenze</b>
 		<br> ><b>Euro 60,00</b>
 		<div id="hoverTariff"><b>Legalizzazioni presso<br> presso il Tribunale di Firenze</b>
 		<br> ><b>Euro 60,00</b>
@@ -166,7 +166,7 @@
   <footer>
     DUODA Traduzioni | Via 25 Aprile, 40 - 52027, San Giovanni Valdarno (Arezzo) ITALIA
     <br>
-    <a class="trans-color-text" href="#">jozefin.duoda@gmail.com</a> | <span itemprop="telephone"><a href="#">+39 338 987 18 80</a></span>
+    <a class="trans-color-text" href="#">jozefin.duoda@gmail.com</a> | <span itemprop="telephone"><a href="#">+39 338 987 18 20</a></span>
     <br>
     <a target="_blank" href="#"> Privacy</a> | <a target="_blank" href="#"> Cookie Policy</a>
 
