--- a/Contattami.html
+++ b/Contattami.html
@@ -109,7 +109,7 @@
  </form>
 
 <!-- LinkedIN -->
- <form class="social1" action="https://www.linkedin.com/in/jozefin-duoda-661b84135/" target="_blank">
+ <form class="social1" action="https://www.linkedin.com/in/duoda-traduzioni-661b84135/" target="_blank">
  <button id="twitter" style="font-size:20px"><i class="fa fa-linkedin"> LinkedIN </i></button>
  </form>
   
@@ -136,12 +136,11 @@
 </div>
 
 <!-- Footer-->
-
 <div id="footer">
   <footer>
     DUODA Traduzioni | Via 25 Aprile, 40 - 52027, San Giovanni Valdarno (Arezzo) ITALIA
     <br>
-    <a class="trans-color-text" href="#">jozefin.duoda@gmail.com</a> | <span itemprop="telephone"><a href="#">+39 338 987 18 20</a></span>
+    <a class="trans-color-text" href="mailto:jozefin.duoda@gmail.com">jozefin.duoda@gmail.com</a> | <span itemprop="telephone"><a href="tel:3389871820">+39 338 987 18 20</a></span>
     <br>
     <a target="_blank" href="#"> Privacy</a> | <a target="_blank" href="#"> Cookie Policy</a>
 
