--- a/I_miei_servizi.html
+++ b/I_miei_servizi.html
@@ -126,8 +126,8 @@
               <br><b>Sottotitoli</b><br> > a partire da <b>Euro 8,50</b> a minuto
               <br><b>Trascrizione</b><br> > a partire da <b>Euro 8,50</b> a minuto
               <br><b>Interprete a ore</b><br> > <b>Euro 38,00</b> all'ora (spese escluse)
-              <br><b>Interprete giornaliero (a partire da 8 ore)</b><br> > <b>Euro 220,00</b> (spese escluse)
-        
+              <br><b>Interprete giornaliero (a partire da 8 ore)</b><br> > <b>Euro 220,00</b> (spese escluse)</div>
+			
         </div>
       </div>
     </div>
