--- a/I_miei_servizi.html
+++ b/I_miei_servizi.html
@@ -86,13 +86,13 @@
 		<br> ><b> Euro 60,00</b>
 		<br><br><b>Legalizzazioni + Asseverazione presso<br> presso il Tribunale di Firenze</b>
 		<br> ><b> Euro 100,00</b>
-            <br><b>Traduzioni varie</b><br>> a partire da <b>Euro 0,065</b> a parola/carattere
-            <br><b>Modifiche (Editing)</b><br> > a partire da <b>Euro 0,040</b> a parola/carattere
-            <br><b>Correzione di bozze</b><br> > a partire da <b>Euro 0,040</b> a parola/carattere
-            <br><b>Sottotitoli</b><br> > a partire da <b>Euro 7,50</b> a minuto
-            <br><b>Trascrizione</b><br> > a partire da <b>Euro 7,50</b> a minuto
-            <br><b>Interprete a ore</b><br> > <b>Euro 32,00</b> all'ora (spese escluse)
-            <br><b>Interprete giornaliero (a partire da 8 ore)</b><br> > <b>Euro 190,00</b> (spese escluse)</div>
+            <br><br><b>Traduzioni varie</b><br>> a partire da <b>Euro 0,065</b> a parola/carattere
+            <br><br><b>Modifiche (Editing)</b><br> > a partire da <b>Euro 0,040</b> a parola/carattere
+            <br><br><b>Correzione di bozze</b><br> > a partire da <b>Euro 0,040</b> a parola/carattere
+            <br><br><b>Sottotitoli</b><br> > a partire da <b>Euro 7,50</b> a minuto
+            <br><br><b>Trascrizione</b><br> > a partire da <b>Euro 7,50</b> a minuto
+            <br><br><b>Interprete a ore</b><br> > <b>Euro 32,00</b> all'ora (spese escluse)
+            <br><br><b>Interprete giornaliero (a partire da 8 ore)</b><br> > <b>Euro 190,00</b> (spese escluse)</div>
       
         
               <h5>Albanese > Italiano</h5><br> 
