--- a/I_miei_servizi.html
+++ b/I_miei_servizi.html
@@ -82,9 +82,9 @@
            <h5>Italiano > Albanese</h5><br>  
             <div><b>Traduzioni Giurate/Asseverazioni<br>Tribunale di Firenze</b>
 		<br> ><b> Euro 60,00</b>
-		<br><br><b>Legalizzazioni presso<br> presso il Tribunale di Firenze</b>
+		<br><br><b>Legalizzazioni<br>Tribunale di Firenze</b>
 		<br> ><b> Euro 60,00</b>
-		<br><br><b>Legalizzazioni + Asseverazione presso<br> presso il Tribunale di Firenze</b>
+		<br><br><b>Legalizzazioni + Asseverazione<br> Tribunale di Firenze</b>
 		<br> ><b> Euro 100,00</b>
             <br><br><b>Traduzioni varie</b><br>> a partire da <b>Euro 0,065</b> a parola/carattere
             <br><br><b>Modifiche (Editing)</b><br> > a partire da <b>Euro 0,040</b> a parola/carattere
@@ -98,9 +98,9 @@
               <h5>Albanese > Italiano</h5><br> 
               <div><b>Traduzioni Giurate/Asseverazioni<br>Tribunale di Firenze</b>
 		<br> ><b> Euro 60,00</b>
-		<br><br><b>Legalizzazioni presso<br> presso il Tribunale di Firenze</b>
+		<br><br><b>Legalizzazioni<br>Tribunale di Firenze</b>
 		<br> ><b> Euro 60,00</b>
-		<br><br><b>Legalizzazioni + Asseverazione presso<br> presso il Tribunale di Firenze</b>
+		<br><br><b>Legalizzazioni + Asseverazione<br>Tribunale di Firenze</b>
 		<br> ><b> Euro 100,00</b>
               <br><br><b>Traduzioni varie</b><br>> a partire da <b>Euro 0,065</b> a parola/carattere
               <br><br><b>Modifiche (Editing)</b><br> > a partire da <b>Euro 0,040</b> a parola/carattere
@@ -112,11 +112,11 @@
 
          
               <h5>Inglese > Albanese</h5><br> 
-              <div><b>Traduzioni Giurate/Asseverazioni<br>il Tribunale di Firenze</b>
+              <div><b>Traduzioni Giurate/Asseverazioni<br>Tribunale di Firenze</b>
 		<br> ><b> Euro 60,00</b>
-		<br><br><b>Legalizzazioni presso<br> presso il Tribunale di Firenze</b>
+		<br><br><b>Legalizzazioni<br>Tribunale di Firenze</b>
 		<br> ><b> Euro 60,00</b>
-		<br><b>Legalizzazioni + Asseverazione presso<br> presso il Tribunale di Firenze</b>
+		<br><b>Legalizzazioni + Asseverazione<br>Tribunale di Firenze</b>
 		<br> ><b> Euro 100,00</b>
 		<br><br><b>Traduzioni varie</b><br>> a partire da <b>Euro 0,070</b> a parola/carattere
               <br><br><b>Modifiche (Editing)</b><br> > a partire da <b>Euro 0,045</b> a parola/carattere
