--- a/I_miei_servizi.html
+++ b/I_miei_servizi.html
@@ -116,7 +116,7 @@
 		<br><br> ><b> Euro 60,00</b>
 		<br><br><b>Legalizzazioni<br>Tribunale di Firenze</b>
 		<br> ><b> Euro 60,00</b>
-		<br><b>Legalizzazioni + Asseverazione<br>Tribunale di Firenze</b>
+		<br><br><b>Legalizzazioni + Asseverazione<br>Tribunale di Firenze</b>
 		<br> ><b> Euro 100,00</b>
 		<br><br><b>Traduzioni varie</b><br>> a partire da <b>Euro 0,070</b> a parola/carattere
               <br><br><b>Modifiche (Editing)</b><br> > a partire da <b>Euro 0,045</b> a parola/carattere
