--- a/I_miei_servizi.html
+++ b/I_miei_servizi.html
@@ -97,7 +97,7 @@
         
              <br> <h5>Inglese > Albanese</h5><br><br> 
               <div><b>Traduzioni Giurate/Asseverazioni<br>Tribunale di Firenze</b>
-		<br><br> ><b> Euro 60,00</b>
+		<br> ><b> Euro 60,00</b>
 		<br><br><b>Legalizzazioni<br>Tribunale di Firenze</b>
 		<br> ><b> Euro 60,00</b>
 		<br><br><b>Legalizzazioni + Asseverazione<br>Tribunale di Firenze</b>
