--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Comfortaa&family=Inconsolata&display=swap" rel="stylesheet"> 
+	<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+	<div class="elfsight-app-e331d714-5868-4b12-96ec-5c8a30210976"></div>
 </head>
 <body>
 
