--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="section-intro no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center">TRADUZIONI ACCURATE IN <br>ITALIANO E ALBANESE</h1>
+        <h1 class="header center">TRADUZIONI ACCURATE IN <br> INGLESE ALBANESE SPAGNOLO E ITALIANO </h1>
         <div class="row center">
           <h5 class="header col s12" id="h5">La migliore traduzione sa evocare l’intraducibile<br> Perché perfezionare, è misurare l’imperfezione. <br> (François Vaucluse)</h5>
         </div>
