--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
             <h2 class="center">SERVIZI</h2>
             <h5 class="center">LA LINGUA ALBANESE E LE MIE COMPETENZE</h5>
 
-            <p class="light">Dispongo di tutte le competenze necessarie per tradurre in lingua albanese (dall’italiano) o in italiano (dall’albanese). Offro traduzioni accurate e altamente professionali, che rispondono ai rigidi criteri di selezione che mi sono imposto.  
-			Le traduzioni in albanese-italiano di cui mi occupo possono essere di grande volume e molto complesse: le consegno a prezzi contenuti, competitivi e con tempistiche veloci. Fornisco soluzioni di traduzione italiano<>albanese a clienti di ogni tipologia, da privati a grandi aziende conosciute in tutto il mondo; offro sempre output precisi ed affidabili alla mia clientela. 
+            <p class="light">Dispongo di tutte le competenze necessarie per tradurre in/da albanese, inglese, spagnolo e italiano. Offro traduzioni accurate e altamente professionali, che rispondono ai rigidi criteri di selezione che mi sono imposto.  
+			Le traduzioni di cui mi occupo possono essere di grande volume e molto complesse: le consegno a prezzi contenuti, competitivi e con tempistiche veloci. Fornisco soluzioni di traduzione italiano<>albanese a clienti di ogni tipologia, da privati a grandi aziende conosciute in tutto il mondo; offro sempre output precisi ed affidabili alla mia clientela. 
 			Dispongo di una formazione completa che mi consente di lavorare gestendo con esperienza diversi ambiti, quali giuridico-legali, economico-finaziari, commerciali, tecnico-scientifici e governativi.<br><br> 
 			L’albanese, parlato oggigiorno da 6 milioni di persone, è la lingua ufficiale di Albania e Kosovo, ma viene utilizzato anche in Montenegro e Macedonia. La lingua albanese è divisa nei due seguenti sottogruppi dialettali: il Ghego (gegë, parlato nel nord dell'Albania) e il Tosco (toskë, parlato nel sud dell’Albania) . Poter disporre di testi, guide e manuali in questa lingua assume particolare importanza per un’industria che vuole espandersi nei Balcani, e non solo. 
 			Non preoccupatevi del settore del lavoro che volete tradurre, il mio lavoro tocca giornalmente vari ambiti diversi tra loro: rivolgendovi a me potrete trovare il collaboratore che state cercando. 
-			Sebbene più frequentemente mi viene richiesto di tradurre dall’italiano all’albanese (e vice versa) dietro specifiche richieste posso fornire anche traduzioni di documenti dall’inglese all’albanese, disponendo di tutte le competenze necessarie. </p>
+			Sebbene più frequentemente mi viene richiesto di tradurre dall’italiano all’albanese (e vice versa) dietro specifiche richieste posso fornire anche traduzioni di documenti dall’inglese e dallo spagnolo all’albanese, disponendo di tutte le competenze necessarie. </p>
           </div>
       </div>
     </div>
