--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="col s12">
           <div class="icon-block">
             <h2 class="center">SERVIZI</h2>
-            <h5 class="center">LA LINGUA ALBANESE E LE MIE COMPETENZE</h5>
+            <h5 class="center">LA LINGUA ALBANESE, LE ALTRE LINGUEE LE MIE COMPETENZE</h5>
 
             <p class="light">Dispongo di tutte le competenze necessarie per tradurre in/da albanese, inglese, spagnolo e italiano. Offro traduzioni accurate e altamente professionali, che rispondono ai rigidi criteri di selezione che mi sono imposto.  
 			Le traduzioni di cui mi occupo possono essere di grande volume e molto complesse: le consegno a prezzi contenuti, competitivi e con tempistiche veloci. Fornisco soluzioni di traduzione italiano<>albanese a clienti di ogni tipologia, da privati a grandi aziende conosciute in tutto il mondo; offro sempre output precisi ed affidabili alla mia clientela. 
