--- a/Contattami.html
+++ b/Contattami.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Contatta Jozefin Duoda</title>
   <meta name="description" content="Traduttore e interprete in lingue: albanese, italiano">
-  <meta name="keywords" content="Traduttore, interprete, lingue, albanese, italiano, interprete, Duoda">
+  <meta name="keywords" content="Traduttore, interprete, lingue, albanese, italiano, spagnolo, interprete, Duoda">
   <meta name="author" content="Jozefin Duoda">
 
 <!-- Favicon -->	
@@ -94,7 +94,7 @@
  </form>
 
 <!-- Mail -->
- <form class="social1" class="social1" action="mailto:jozefin.duoda@gmail.com" target="_blank">
+ <form class="social1" class="social1" action="mailto:duodatraduzioni@gmail.com" target="_blank">
  <button id="Mail" style="font-size:20px"><i class="fa fa-envelope"> Mail </i></button>
  </form>
 
@@ -140,7 +140,7 @@
   <footer>
     DUODA Traduzioni | Via 25 Aprile, 40 - 52027, San Giovanni Valdarno (Arezzo) ITALIA
     <br>
-    <a class="trans-color-text" href="mailto:jozefin.duoda@gmail.com">jozefin.duoda@gmail.com</a> | <span itemprop="telephone"><a href="tel:3389871820">+39 338 987 18 20</a></span>
+    <a class="trans-color-text" href="mailto:duodatraduzioni@gmail.com">duodatraduzioni@gmail.com</a> | <span itemprop="telephone"><a href="tel:3389871820">+39 338 987 18 20</a></span>
     <br>
     <a target="_blank" href="#"> Privacy</a> | <a target="_blank" href="#"> Cookie Policy</a>
 
