--- a/Recensioni.html
+++ b/Recensioni.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Recensioni su Jozefin Duoda</title>
   <meta name="description" content="Traduttore e interprete in lingue: albanese, italiano">
-  <meta name="keywords" content="Traduttore, interprete, lingue, albanese, italiano, interprete, Duoda">
+  <meta name="keywords" content="Traduttore, interprete, lingue, albanese, italiano, spagnolo, asseverazione, legalizzazione, Duoda">
   <meta name="author" content="Jozefin Duoda">
 	
 <!-- Favicon -->	
@@ -122,7 +122,7 @@
   </div><br><br>
 
 <br><p>The BEST translator interpreter from Italian and English into Albanian and from Albanian into Italian is Jozefin Duoda. 
-<br><b>- DOTT. CASCELLA MARCO CEO (PRO-Z) -</b></p>
+<br><b>- Dott. Cascella Marco CEO (PRO-Z) -</b></p>
 <div class="rate">
 <input type="radio" id="star5" name="rate" value="5" />
     <label for="star5" title="text">5 stars</label>
@@ -161,7 +161,7 @@
   <footer>
     DUODA Traduzioni | Via 25 Aprile, 40 - 52027, San Giovanni Valdarno (Arezzo) ITALIA
     <br>
-    <a class="trans-color-text" href="mailto:jozefin.duoda@gmail.com">jozefin.duoda@gmail.com</a> | <span itemprop="telephone"><a href="tel:3389871820">+39 338 987 18 20</a></span>
+    <a class="trans-color-text" href="mailto:duodatraduzioni@gmail.com">duodatraduzioni@gmail.com</a> | <span itemprop="telephone"><a href="tel:3389871820">+39 338 987 18 20</a></span>
     <br>
     <a target="_blank" href="#"> Privacy</a> | <a target="_blank" href="#"> Cookie Policy</a>
 
