--- a/I_miei_servizi.html
+++ b/I_miei_servizi.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Servizi offerti da Jozefin Duoda</title>
   <meta name="description" content="Traduttore e interprete in lingue: albanese, italiano">
-  <meta name="keywords" content="Traduttore, interprete, lingue, albanese, italiano, interprete, Duoda">
+  <meta name="keywords" content="Traduttore, interprete, lingue, albanese, italiano, spagnolo, asseverazioni, legalizzazioni, Duoda">
   <meta name="author" content="Jozefin Duoda">
 
 <!-- Favicon -->	
