--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="row center">
           <a href="tel:3389871820" target="_bkanket" id="download-button1" class="btn-large">Chiama</a>
-          <a href="mailto:jozefin.duoda@gmail.com" target="_bkanket" id="download-button2" class="btn-large">E-Mail</a>
+          <a href="mailto:duodatraduzioni@gmail.com" target="_bkanket" id="download-button2" class="btn-large">E-Mail</a>
         </div>
         <br><br>
 
