TRADUZIONI di Jozefin Duoda

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
        <div class="topnav" id="myTopnav">
         <div class="secondnav">
-                <a href="index.html" class="active">DUODA Traduzioni</a>
+                <a href="index.html" class="active">DUODA TRADUZIONI di Jozefin Duoda</a>
                 <a href="index.html">Home</a>
                 <a href="Su_di_me.html">Su di me</a>
                 <a href="I_miei_servizi.html">I miei servizi</a>
