--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
 
 <!-- Favicon -->	
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-	
-<!-- Google Analytics -->
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9PN5RV5DKY"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QTYLNS0R2X"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-9PN5RV5DKY');
+  gtag('config', 'G-QTYLNS0R2X');
 </script>
 	
   <!-- CSS  -->
